Fix bug in adjusting coordinate

--- a/genogram.sty
+++ b/genogram.sty
@@ -654,7 +654,7 @@
 }
 
 \newcommand{\internal@adjustNiblingNodes}[1]{% #1=node name prefix
-    \coordinate (#1below) at ($(#1above)+(0,\pgfkeysvalueof{/genogram/siblings generation add distance below})$);
+    \coordinate (#1above) at ($(#1above)+(0,\pgfkeysvalueof{/genogram/siblings generation add distance below})$);
 }
 
 
